style: fix flex item min-width bug to allow email address to wrap on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -834,6 +834,7 @@ b.colored {
 
 .contact-text {
     flex-grow: 1;
+    min-width: 0;
 }
 
 .contact-text h5 {
